# VoiceX

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  README.zh-CN.md  RELEASE.md  THIRD_PARTY_LICENSES  cmake-wrap.cmd  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.github/workflows/: windows-release.yml
docs/: elevenlabs-asr-implementation-tasklist.md  elevenlabs-asr-provider-analysis.md  i18n-ui-design.md  macos-text-injection-notes.md
scripts/: Build-VoiceX.ps1  Enter-VoiceX.ps1  build-macos-local-release.sh  dev-server.mjs  setup-macos-local-signing.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: foreground_app.rs  i18n.rs  lib.rs  main.rs  state.rs  ui_locale.rs
src-tauri/src/asr/: audio_utils.rs  client.rs  cohere_client.rs  coli_client.rs  config.rs  elevenlabs_client.rs  elevenlabs_realtime_client.rs  funasr_client.rs  gemini_client.rs  gemini_live_client.rs  google_client.rs  mod.rs  ogg_decoder.rs  openai_client.rs  openai_realtime_client.rs  protocol.rs  qwen_client.rs  qwen_transcription_client.rs  soniox_client.rs  stepaudio_client.rs  transcription.rs  volc_auth.rs
src-tauri/src/audio/: capture.rs  chunker.rs  device.rs  mod.rs
src-tauri/src/commands/: audio.rs  build_info.rs  history.rs  hotkey.rs  hotword.rs  hud.rs  mod.rs  retranscribe.rs  settings.rs  sync.rs
src-tauri/src/hotkey/: config.rs  manager.rs  mod.rs  permissions.rs
src-tauri/src/hud/: mod.rs  window.rs
src-tauri/src/injector/: clipboard.rs  mod.rs  windows_input.rs
src-tauri/src/llm/: client.rs  config.rs  mod.rs  provider.rs  timeout.rs
src-tauri/src/services/: asr_debug_service.rs  asr_manager.rs  audio_manager.rs  countdown_service.rs  history_service.rs  hotword_service.rs  hud_service.rs  llm_service.rs  mod.rs  post_processing_service.rs  sync_service.rs  text_injection_service.rs
src-tauri/src/session/: message.rs  mod.rs  utils.rs
src-tauri/src/session/handlers/: asr.rs  finalize.rs  hotkey.rs  mod.rs
src-tauri/src/storage/: database.rs  mod.rs
src/components/: LanguageSwitcher.vue  ReTranscribeDialog.vue  Sidebar.vue
src/components/asr/: AsrCohereSettings.vue  AsrColiSettings.vue  AsrElevenLabsSettings.vue  AsrFunAsrSettings.vue  AsrGeminiLiveSettings.vue  AsrGeminiSettings.vue  AsrGoogleSettings.vue  AsrOpenAISettings.vue  AsrQwenSettings.vue  AsrSonioxSettings.vue  AsrStepAudioSettings.vue  AsrVolcengineSettings.vue
src/hud/: hud.css  hud.ts  index.html
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/stores/: history.ts  settings.ts  sync.ts
src/styles/: asr-settings.css  main.css  variables.css
src/types/: asr.ts
src/utils/: hotkey.ts  llmOptions.ts  llmPrompts.ts  providerOptions.ts  text.ts
src/views/: About.vue  AsrSettings.vue  Dictionary.vue  History.vue  Hotwords.vue  InputSettings.vue  LlmSettings.vue  Overview.vue  PostProcessing.vue  SyncSettings.vue
sync-server/: Cargo.toml  README.md
sync-server/src/: main.rs
tools/llm-bench/: Cargo.toml  config.example.toml  test_cases.example.toml
(+1 files in other folders)
